Maven Package that Triggered by Release will  check out code through the related Tag

--- a/unicorn-core/pom.xml
+++ b/unicorn-core/pom.xml
@@ -126,6 +126,16 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>checker-qual</artifactId>
+                    <groupId>org.checkerframework</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>error_prone_annotations</artifactId>
+                    <groupId>com.google.errorprone</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!--工具包-->
@@ -201,6 +211,7 @@
             <artifactId>yauaa</artifactId>
         </dependency>
 
+        <!-- 从 Ehcache 到 Guava Cache 再到 Caffeine -->
         <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
