--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.lwohvye</groupId>
-    <artifactId>eladmin</artifactId>
+    <artifactId>unicorn</artifactId>
     <packaging>pom</packaging>
     <version>3.2.0-SNAPSHOT</version>
 
@@ -49,7 +49,7 @@
         <connection>scm:git:git://github.com/lWoHvYe/eladmin.git</connection>
         <developerConnection>scm:git:ssh://github.com/lWoHvYe/eladmin.git</developerConnection>
         <url>https://github.com/lWoHvYe/eladmin/tree/main</url>
-        <tag>eladmin-v3.2.0</tag>
+        <tag>unicorn-v3.2.0</tag>
     </scm>
 
     <modules>
