--- a/valentine-starter/pom.xml
+++ b/valentine-starter/pom.xml
@@ -142,7 +142,7 @@
                 <activeByDefault>true</activeByDefault>       <!-- 默认的，不加参数时执行这个profile -->
             </activation>
         </profile>
-        <!--    未来的Jigsaw. profile中可以配置dependency, build/plugin这些，这是之前不知道的,但这个dependency不能影响正常的run，因为只在build/package时会使用的样子    -->
+        <!--    未来的Jigsaw. profile中可以配置dependency，需要外置依赖时，可以active该profile    -->
         <profile>
             <id>jigsaw</id>
             <properties>
