--- a/valentine-starter/pom.xml
+++ b/valentine-starter/pom.xml
@@ -142,89 +142,11 @@
                 <activeByDefault>true</activeByDefault>       <!-- 默认的，不加参数时执行这个profile -->
             </activation>
         </profile>
-        <!--    未来的Jigsaw. profile中可以配置dependency，需要外置依赖时，可以active该profile    -->
-        <profile>
-            <id>jigsaw</id>
-            <properties>
-                <profiles.active>jigsaw</profiles.active>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.springframework.boot</groupId>
-                        <artifactId>spring-boot-maven-plugin</artifactId>
-                        <configuration>
-                            <excludes>
-                                <exclude>
-                                    <groupId>org.springframework.boot</groupId>
-                                    <artifactId>spring-boot-configuration-processor</artifactId>
-                                </exclude>
-                            </excludes>
-                            <includes>
-                                <!-- 不存在的include引用，相当于排除所有maven依赖jar，没有任何三方jar文件打入输出jar -->
-                                <include>
-                                    <groupId>nothing</groupId>
-                                    <artifactId>nothing</artifactId>
-                                </include>
-                            </includes>
-                            <layout>ZIP</layout>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>repackage</id>
-                                <!--这样打出的jar有两个，一个是没把sb相关打进去的.jar和一个打进去的exec.jar，如果是作为被引用的模块的话，可以这样配置-->
-                                <!--<configuration>
-                                    <classifier>exec</classifier>
-                                </configuration>-->
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <!--maven-jar-plugin:   jar: Package config missing from ModulePackages class file attribute;  Could not create modular JAR file. The JDK jar tool exited with 1-->
-                    <!-- jar包内剔除所有配置文件 -->
-                    <plugin>
-                        <artifactId>maven-jar-plugin</artifactId>
-                        <configuration>
-                            <!--   https://maven.apache.org/plugins/maven-jar-plugin/usage.html   -->
-                            <!--   https://maven.apache.org/shared/maven-archiver/examples/classpath.html   -->
-                            <archive>
-                                <manifest>
-                                    <addClasspath>true</addClasspath>
-                                </manifest>
-                            </archive>
-                            <!--不打入jar包的文件类型或者路径-->
-                            <!--<excludes>-->
-                            <!--    <exclude>config/**</exclude>-->
-                            <!--</excludes>-->
-                        </configuration>
-                    </plugin>
-                    <!-- 拷贝项目所有依赖jar文件到构建lib目录下 -->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-dependency-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>copy-dependencies</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>copy-dependencies</goal>
-                                </goals>
-                                <configuration>
-                                    <outputDirectory>${project.build.directory}/lib</outputDirectory>
-                                    <excludeTransitive>false</excludeTransitive>
-                                    <stripVersion>false</stripVersion>
-                                    <silent>true</silent>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
     </profiles>
     <!-- 打包 -->
     <build>
+        <finalName>valentine-starter-${project.core.version}</finalName>
         <plugins>
-            <!-- Spring Boot模块jar构建 https://docs.spring.io/spring-boot/docs/current/maven-plugin/reference/htmlsingle/#packaging.examples.custom-classifier -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -235,6 +157,14 @@
                             <artifactId>spring-boot-configuration-processor</artifactId>
                         </exclude>
                     </excludes>
+                    <includes>
+                        <!-- 不存在的include引用，相当于排除所有maven依赖jar，没有任何三方jar文件打入输出jar -->
+                        <include>
+                            <groupId>nothing</groupId>
+                            <artifactId>nothing</artifactId>
+                        </include>
+                    </includes>
+                    <layout>DIR</layout>
                 </configuration>
                 <executions>
                     <execution>
@@ -352,6 +282,43 @@
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
+            </plugin>
+            <!-- jar包内剔除所有配置文件 -->
+            <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <!--   https://maven.apache.org/plugins/maven-jar-plugin/usage.html   -->
+                    <!--   https://maven.apache.org/shared/maven-archiver/examples/classpath.html   -->
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                        </manifest>
+                    </archive>
+                    <!--不打入jar包的文件类型或者路径-->
+                    <!--<excludes>-->
+                    <!--    <exclude>config/**</exclude>-->
+                    <!--</excludes>-->
+                </configuration>
+            </plugin>
+            <!-- 拷贝项目所有依赖jar文件到构建lib目录下 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                            <excludeTransitive>false</excludeTransitive>
+                            <stripVersion>false</stripVersion>
+                            <silent>true</silent>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
