--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,12 +13,9 @@ jobs:
     permissions:
       actions: read
       contents: read
-      security-events: write
 
     strategy:
       fail-fast: false
-      matrix:
-        language: [ 'java' ]
 
     steps:
     - name: Checkout repository
@@ -28,18 +25,11 @@ jobs:
       with:
         java-version: '18'
         distribution: 'temurin'
-        check-latest: true
-
-    # Initializes the CodeQL tools for scanning.
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v2
-      with:
-        languages: ${{ matrix.language }}
-        
+        check-latest: true        
 
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v2
+    - name: Build Core
+      run: mvn -B install --file pom.xml
     - name: Build with Maven
       run: mvn -B package --file valentine-starter/pom.xml
     - name: Build the Docker image
