--- a/valentine-search/src/main/resources/config/application.yml
+++ b/valentine-search/src/main/resources/config/application.yml
@@ -86,5 +86,5 @@ local:
     # 相同服务的各实例会有不同的配置，从而使得一些事件能被各实例都消费一次，理论上有更好地解决方案
     sp-sync-queue: she.sp-sync.queue
     # 对所有请求放行
-    unauth: true
+    un-auth: true
 
