--- a/unicorn-starter/src/main/resources/config/application.yml
+++ b/unicorn-starter/src/main/resources/config/application.yml
@@ -102,7 +102,7 @@ local:
     # 使用多个策略配置。默认false
     multi-security: false
     # 关闭权限验证，默认false
-    unauth: false
+    un-auth: false
     # 表名映射
     table-name:
       user: sys_user
