--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 upload
+HELP.md
+target/
+!.mvn/wrapper/maven-wrapper.jar
+
 ### Java template
 # Compiled class file
 *.class
@@ -25,7 +29,6 @@ upload
 hs_err_pid*
 
 ### Maven template
-target/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -182,7 +185,12 @@ local.properties
 .texlipse
 
 # STS (Spring Tool Suite)
+.apt_generated
+.classpath
+.project
+.settings
 .springBeans
+.sts4-cache
 
 # Code Recommenders
 .recommenders/
@@ -267,3 +275,12 @@ Temporary Items
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
