--- a/unicorn-cd-generator/pom.xml
+++ b/unicorn-cd-generator/pom.xml
@@ -26,7 +26,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>unicorn-cd-generator</artifactId>
-    <name>代码生成模块</name>
+    <name>Code Generator</name>
     <url>https://github.com/lWoHvYe/eladmin</url>
     <description>Server and Web Code Generator</description>
 
