--- a/unicorn-logging/pom.xml
+++ b/unicorn-logging/pom.xml
@@ -26,7 +26,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>unicorn-logging</artifactId>
-    <name>日志收集模块</name>
+    <name>Log Collector</name>
     <url>https://github.com/lWoHvYe/eladmin</url>
     <description>Logging module with API for store and retrieve</description>
 
