--- a/unicorn-reactive/pom.xml
+++ b/unicorn-reactive/pom.xml
@@ -26,7 +26,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>unicorn-reactive</artifactId>
-    <name>系统核心模块(WebFlux)</name>
+    <name>Reactive Core</name>
     <url>https://github.com/lWoHvYe/eladmin</url>
     <description>Common module extend for WebFlux</description>
 
