--- a/unicorn-tp-tools/pom.xml
+++ b/unicorn-tp-tools/pom.xml
@@ -26,7 +26,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>unicorn-tp-tools</artifactId>
-    <name>3rd工具模块</name>
+    <name>3rd Tools</name>
     <url>https://github.com/lWoHvYe/eladmin</url>
     <description>Tools and Third Party</description>
 
