--- a/unicorn-starter/pom.xml
+++ b/unicorn-starter/pom.xml
@@ -104,6 +104,7 @@
             <artifactId>mockito-inline</artifactId>
             <scope>test</scope>
         </dependency>
+        <!--   kotlin is optional     -->
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
