--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,6 @@
         <maven.compiler.release>17</maven.compiler.release>
         <log4jdbc.version>1.18</log4jdbc.version>
         <springdoc.openapi.version>1.6.11</springdoc.openapi.version>
-        <druid.version>1.2.11</druid.version>
         <hikaricp.version>5.0.1</hikaricp.version>
         <hutool.version>5.8.5</hutool.version>
         <fastutil.version>8.5.8</fastutil.version>
@@ -167,22 +166,22 @@
             </dependency>
 
             <!-- druid数据源驱动 ; 注：使用shardingsphere时。这里不能用druid但spring-boot-starter -->
-            <dependency>
-                <groupId>com.alibaba</groupId>
-                <artifactId>druid</artifactId>
-                <version>${druid.version}</version>
-                <!--      不兼容Jdk 11 及以上版本，移除依赖 https://github.com/alibaba/druid/issues/3060      -->
-                <exclusions>
-                    <exclusion>
-                        <artifactId>jconsole</artifactId>
-                        <groupId>com.sun</groupId>
-                    </exclusion>
-                    <exclusion>
-                        <artifactId>tools</artifactId>
-                        <groupId>com.sun</groupId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
+            <!--<dependency>-->
+            <!--    <groupId>com.alibaba</groupId>-->
+            <!--    <artifactId>druid</artifactId>-->
+            <!--    <version>${druid.version}</version>-->
+            <!--    不兼容Jdk 11 及以上版本，移除依赖 https://github.com/alibaba/druid/issues/3060 -->
+            <!--       <exclusions>-->
+            <!--          <exclusion>-->
+            <!--             <artifactId>jconsole</artifactId>-->
+            <!--             <groupId>com.sun</groupId>-->
+            <!--          </exclusion>-->
+            <!--          <exclusion>-->
+            <!--             <artifactId>tools</artifactId>-->
+            <!--             <groupId>com.sun</groupId>-->
+            <!--          </exclusion>-->
+            <!--       </exclusions>-->
+            <!--</dependency>-->
 
             <!--工具包-->
             <dependency>
