--- a/valentine-starter/pom.xml
+++ b/valentine-starter/pom.xml
@@ -31,8 +31,8 @@
 
     <properties>
         <java.version>19</java.version>
-        <unicorn.core.version>3.2.0-SNAPSHOT</unicorn.core.version>
-        <maven.compiler.release>18</maven.compiler.release>
+        <unicorn.core.version>3.x-SNAPSHOT</unicorn.core.version>
+        <maven.compiler.release>19</maven.compiler.release>
         <mapstruct.version>1.5.2.Final</mapstruct.version>
         <hikaricp.version>5.0.1</hikaricp.version>
         <caffeine.version>3.1.1</caffeine.version>
