--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,10 +13,10 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ main ]
+    branches: [ dev_3.x ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ main ]
+    branches: [ dev_3.x ]
   schedule:
     - cron: '18 2 * * 2'
 
@@ -44,9 +44,9 @@ jobs:
       uses: actions/setup-java@v3.5.0
       with:
         # The Java version to set up. Takes a whole or semver Java version. See examples of supported syntax in README file
-        java-version: '17'
+        java-version: '19'
         # Java distribution. See the list of supported distributions in README file
-        distribution: 'temurin'
+        distribution: 'corretto'
         # The package type (jdk, jre, jdk+fx, jre+fx)
         #java-package: # optional, default is jdk
         # The architecture of the package
