--- a/valentine-react-starter/pom.xml
+++ b/valentine-react-starter/pom.xml
@@ -14,8 +14,8 @@
     <description>valentine-react-starter</description>
 
     <properties>
-        <java.version>17</java.version>
-        <unicorn.core.version>3.2.0-SNAPSHOT</unicorn.core.version>
+        <java.version>19</java.version>
+        <unicorn.core.version>3.x-SNAPSHOT</unicorn.core.version>
         <kotlin.version>1.7.10</kotlin.version>
         <springdoc.openapi.version>1.6.11</springdoc.openapi.version>
     </properties>
