--- a/pom.xml
+++ b/pom.xml
@@ -472,12 +472,12 @@
                 </configuration>
             </plugin>
             <!--     Maven JDK9 Jigsaw。这个暂时并没有用到       -->
-            <plugin>
+            <!--<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jmod-plugin</artifactId>
                 <version>3.0.0-alpha-1</version>
                 <extensions>true</extensions>
-            </plugin>
+            </plugin>-->
             <!--     Toolchains are ignored, 'javadocExecutable' parameter is set to。这个插件是用来配置maven run的jdk的，当前是通过其他方式配置了     -->
             <!--<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
