--- a/unicorn-reactive/pom.xml
+++ b/unicorn-reactive/pom.xml
@@ -40,6 +40,10 @@
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-starter-web</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-undertow</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
 
