Simple use of @PropertySource, see https://www.lwohvye.com/2022/10/26/springboot%e8%af%bb%e5%8f%96%e9%85%8d%e7%bd%ae%e6%96%87%e4%bb%b6/
(cherry picked from commit 8610eaa2053307ab1ea4333aba66dcea0ae1f5df)

--- a/unicorn-system/pom.xml
+++ b/unicorn-system/pom.xml
@@ -78,6 +78,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!--Annotation Processor-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <!-- jwt -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
