--- a/unicorn-system/src/main/resources/system-common.properties
+++ b/unicorn-system/src/main/resources/system-common.properties
@@ -13,23 +13,12 @@
 #    See the License for the specific language governing permissions and
 #    limitations under the License.
 #
-#DataBase-Type Covert to Java-Type
-tinyint=Integer
-smallint=Integer
-mediumint=Integer
-int=Integer
-integer=Integer
-bigint=Long
-float=Float
-double=Double
-decimal=BigDecimal
-bit=Boolean
-char=String
-varchar=String
-tinytext=String
-text=String
-mediumtext=String
-longtext=String
-date=Timestamp
-datetime=Timestamp
-timestamp=Timestamp
+
+
+## Async-Thread-pool
+task.pool.core-pool-size: 10
+task.pool.max-pool-size: 20
+task.pool.keep-alive-seconds: 60
+task.pool.queue-capacity: 50
+task.pool.wait-for-tasks-to-complete: true
+task.pool.await-termination-seconds: 60
