--- a/unicorn-reactive/pom.xml
+++ b/unicorn-reactive/pom.xml
@@ -47,6 +47,17 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.websocket</groupId>
+            <artifactId>jakarta.websocket-api</artifactId>
+            <scope>compile</scope>
+        </dependency>
+
         <!--Spring boot Web容器-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
