--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -28,3 +28,7 @@ updates:
       - dependency-name: "com.aliyun.oss:aliyun-sdk-oss"
       - dependency-name: "com.aliyun:dysmsapi20170525"
       - dependency-name: "net.dreamlu:mica-ip2region"
+      - dependency-name: "com.github.oshi:oshi-core"
+        versions: ["6.x"]
+      - dependency-name: "nl.basjes.parse.useragent:yauaa"
+        versions: ["7.x"]
