--- a/pom.xml
+++ b/pom.xml
@@ -241,9 +241,9 @@
             </dependency>
             <!--      滑动验证码      -->
             <dependency>
-                <groupId>com.anji-plus</groupId>
-                <artifactId>spring-boot-starter-captcha</artifactId>
-                <version>1.3.0</version>
+                <groupId>com.lwohvye.captcha</groupId>
+                <artifactId>captcha-spring-boot-starter</artifactId>
+                <version>2.0.0</version>
             </dependency>
 
             <!-- 解析客户端操作系统、浏览器信息 Yauaa: Yet Another UserAgent Analyzer -->
