--- a/unicorn-system/pom.xml
+++ b/unicorn-system/pom.xml
@@ -123,8 +123,8 @@
             <artifactId>easy-captcha</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.anji-plus</groupId>
-            <artifactId>spring-boot-starter-captcha</artifactId>
+            <groupId>com.lwohvye.captcha</groupId>
+            <artifactId>captcha-spring-boot-starter</artifactId>
         </dependency>
 
         <!-- linux的管理 -->
