--- a/valentine-starter/src/main/resources/config/application.yml
+++ b/valentine-starter/src/main/resources/config/application.yml
@@ -11,7 +11,7 @@ server:
 
 spring:
   application:
-    name: EL-Admin-Starter
+    name: Valentine-Starter
   freemarker:
     check-template-location: false
   profiles:
