--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.0-SNAPSHOT</version>
+        <version>3.0.0</version>
         <!--<relativePath/>设定一个空值将始终从仓库中获取，不从本地路径获取。
         查找顺序：relativePath元素中的地址–本地仓库–远程仓库-->
         <relativePath/> <!-- lookup parent from repository -->
@@ -420,28 +420,4 @@
             </plugin>
         </plugins>
     </build>
-    <!-- (you only need this if you are using a milestone or snapshot version) -->
-    <repositories>
-        <repository>
-            <id>spring-snapshots</id>
-            <url>https://repo.spring.io/snapshot</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>spring-milestones</id>
-            <url>https://repo.spring.io/milestone</url>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>spring-snapshots</id>
-            <url>https://repo.spring.io/snapshot</url>
-        </pluginRepository>
-        <pluginRepository>
-            <id>spring-milestones</id>
-            <url>https://repo.spring.io/milestone</url>
-        </pluginRepository>
-    </pluginRepositories>
 </project>
